Add PAN-OS API overview

--- a/docs/sidebars.yml
+++ b/docs/sidebars.yml
@@ -1,17 +1,17 @@
-SIDEBAR:
-  - category: Docusaurus
-    ids:
-      - doc1
-      - doc2
-      - doc3
-  - category: Features
-    ids:
-      - mdx
-      - mdown
-  - category: Steve
-    ids:
-      - ballmer1
-      - doc4
-  - category: Live Coding
-    ids:
-      - livecoding
+SIDEBARS:
+  - api:
+    - category: Overview
+      ids:
+        - panos_api
+  - iac:
+    - category: Overview
+      ids:
+        - mdx
+  - cloudsec:
+    - category: Overview
+      ids:
+        - ballmer1
+        - doc4
+    - category: Live Coding
+      ids:
+        - livecoding
