--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "classnames": "^2.2.6",
     "js-yaml": "^3.13.1",
     "netlify-cms-app": "^2.9.8-beta.4",
+    "node-sass": "^4.13.0",
+    "panw-blox": "^1.2.0",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-particles-js": "^2.7.0"
   },
   "browserslist": {
     "production": [
