--- a/docs/sidebars.yml
+++ b/docs/sidebars.yml
@@ -29,6 +29,18 @@ SIDEBARS:
     - category: Overview
       ids:
         - cloud
-    - category: Cloud Templates
+    - category: AWS
+      ids:
+        - aws_qs
+        - pan_guard_duty
+        - autoscaling_aws
+        - terraform_elb
+    - category: Azure
+      ids:
+        - azure_qs
+    - category: Google Cloud
+      ids:
+        - gcp_qs
+    - category: Private Cloud
       ids:
         - cloudtemplates_qs
