--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.30",
     "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.23",
     "classnames": "^2.2.6",
+    "docusaurus": "^1.14.0",
     "js-yaml": "^3.13.1",
     "netlify-cms-app": "^2.9.8-beta.4",
     "node-sass": "^4.13.0",
