Point to media folder

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   open_authoring: true
   squash_merges: true
 publish_mode: editorial_workflow
-media_folder: "../../static/img"
+media_folder: "static/img"
 public_folder: "/img"
 collections:
   - name: "docs" # Used in routes, e.g., /admin/collections/blog
