--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-particles-js": "^2.7.0",
-    "react-scroll-up-button": "^1.6.4"
+    "react-scroll-up-button": "^1.6.4",
+    "string": "^3.3.3"
   },
   "browserslist": {
     "production": [
@@ -34,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2"
   }
 }
