--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   branch: master
   repo: PaloAltoNetworks/panos.pan.dev
-  open_authoring: false
+  open_authoring: true
   squash_merges: true
 publish_mode: editorial_workflow
 media_folder: "static/img"
