--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-
-            
+            - v1-dependencies- 
       - run:
           name: Avoid hosts unknown for github
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
@@ -24,7 +23,7 @@ jobs:
           name: install dependencies
           command: |
             git clone git@github.com:algolia/docsearch-scraper.git && cd docsearch-scraper
-            pip install pipenv
+            pip install --user pipenv
             pipenv install
 
       - run:
