Adds Ansible Tutorial about security rules
Signed-off-by: Luigi Mori <l@isidora.org>

--- a/docs/sidebars.yml
+++ b/docs/sidebars.yml
@@ -38,6 +38,9 @@ SIDEBARS:
       - category: Terraform
         ids:
           - terraform_qs
+      - category: Tutorials
+        ids:
+          - automation_tutorials_ansible_srule
     sidebar: automation
   - categories:
       - category: Overview
