--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
     "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.37",
     "@docusaurus/theme-search-algolia": "^2.0.0-alpha.37",
     "classnames": "^2.2.6",
-    "js-yaml": "^3.13.1",
-    "netlify-cms-app": "^2.9.8-beta.4",
-    "node-sass": "^4.13.0",
-    "panw-blox": "^1.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-particles-js": "^2.7.0",
@@ -39,8 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "grunt": "^1.0.4",
-    "grunt-cli": "^1.3.2"
-  }
+  "devDependencies": {}
 }
