--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.39",
-    "@docusaurus/mdx-loader": "^2.0.0-alpha.39",
-    "@docusaurus/plugin-content-docs": "^2.0.0-alpha.39",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.39",
-    "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.39",
-    "@docusaurus/theme-search-algolia": "^2.0.0-alpha.39",
+    "@docusaurus/core": "^2.0.0-alpha.40",
+    "@docusaurus/mdx-loader": "^2.0.0-alpha.40",
+    "@docusaurus/plugin-content-docs": "^2.0.0-alpha.40",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.40",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.40",
+    "@docusaurus/theme-search-algolia": "^2.0.0-alpha.40",
     "classnames": "^2.2.6",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-particles-js": "^2.7.0",
     "react-scroll-up-button": "^1.6.4"
   },
