Switch to wait for netlify action

--- a/.github/workflows/lighthouseCI.yml
+++ b/.github/workflows/lighthouseCI.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Waiting for Netlify build preview
-        uses: probablyup/wait-for-netlify-action@3.2.0
-        id: waitForNetlifyDeploy
+        uses: kamranayub/wait-for-netlify-action@2.0.0
+        id: wait_for_netlify_deploy
         with:
-          site_id: 'panos-pan-dev'
+          site_name: "https://panos.pan.dev/"
         env:
           NETLIFY_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
       - name: Audit URLs using Lighthouse
