--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "mobx": "6.1.8",
+    "node": "15.12.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scroll-up-button": "^1.6.4",
